tests/static_method_variant_collision/error.txt
Validation error: ./tests/static_method_variant_collision/static_method_variant_collision.fae:6
 Static method `OnFire` on enum `State` conflicts with variant `OnFire`
  6| fn OnFire() {}
        ^^^^^^
Note: ./tests/static_method_variant_collision/static_method_variant_collision.fae:2
 Variant `OnFire` here
  2|     OnFire
         ^^^^^^
